# AutoClaude

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AutoClaude.md  AutoClaude.spec  AutoClaude_v2.3.0.spec  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  WORKFLOW.md  audit_after.json  audit_before.json  build.py  config.py  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap_model_badge.md  run.py
.claude/: CLAUDE.md  zones.md
.claude/commands/: bump_version.md  close.md  closeV2.md  start.md  startV2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: dynamic-content.instructions.md  multiia-workflow.instructions.md  testing.instructions.md
.github/workflows/: lint.yml  tests.yml
.tooling/: archive_search.py  bump_changelog.py  bump_version.py  bump_version_files.json
APPRENTISSAGES/: README.md  meta.json
APPRENTISSAGES/bugs_resolved/: 2026_04_25_ctklabel_bind_windows.md  2026_04_25_pytest_patching_static_imports.md
APPRENTISSAGES/ui/: 2026_04_25_tips_inline_vs_popup.md
APPRENTISSAGES/workflows/: 2026_04_25_agent_customization_navigation.md  2026_04_25_interactive_learnings_navigation.md  2026_04_25_multi_ia_strategic_reposition.md
ARCHIVES/: README.md  meta.json
ARCHIVES/docs_legacy/: DEVELOPMENT_PLAN.md  ROADMAP_v2.5.0.md  (+1 more)
COMET/: CODE_BUNDLE_AutoClaude.md  PROMPT_PERPLEXITY.txt  README.md
DOCS/: ARCHITECTURE.md  CHARTE_GRAPHIQUE.md  DEVELOPMENT_PLAN.md  PLAN_DE_TRAVAIL.md  REFACTOR_PLAN.md  ROADMAP.md  SECURITY.md
_archives/: roadmap_model_badge.md
_contexte/: contexte.md  signals.md
tests/: conftest.py
(+78 files in other folders)
