[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclaude"
version = "2.3.0"
description = ""
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "ServOMorph"}]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyautogui>=0.9.53",
    "pynput>=1.7.6",
    "customtkinter>=5.2.2",
    "Pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ServOMorph/AutoClaude"
Issues = "https://github.com/ServOMorph/AutoClaude/issues"
Repository = "https://github.com/ServOMorph/AutoClaude"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", "dist", ".venv", "venv"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
